      cursor).

      * FIXME:
        * Difficult to actually draw, unless mouse-accessibility is also on.
        * Option is on by default; should be disabled by default, and enabled
          via config.
        * ASDW is QWERTY-centric; drop it, or add ways to support other
          keyboard layouts.
        * Who wrote this, so we can credit!?!?

  * Other Improvements:
    -------------------
    * Quicker prompt window pop-up animation.

    * Slightly improved mouse motion handling when Tux Paint is very busy
      drawing or previewing.  (e.g., when drawing a circle, you could often
      end up with a "D" shape... now, you get more of a regular polygon shape
      if Tux Paint is taking too long to draw.  It skips some motion events,
      rather than ignoring all motion events after the first 1/4th second.)

    * Deleting files from Tux Paint's 'Open' dialog now moves them to
      the user's Trash folder.
      FIXME: Only on freedesktop.org systems (e.g., Linux)
      (SourceForge.net Feature #3101084)

    * Tux Paint (in windowed mode) now only centers itself if
      no specific positioning has been provided via
      the SDL_VIDEO_WINDOW_POS environment variable.
      (SourceForge Bug #3138446)

    * Creating thumbnails for the starters we provide.
      (Speeds up 'New' dialog appearance.)
      (SourceForge Bug #1417849)
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * On systems where Pango is used for UI text rendering, Tux Paint now
      spawns a temporary thread during start-up (at the splash screen) to
      allow "fontconfig" to generate its font cache in the background,
      while showing the "please wait" animation, and responding to the US.
      (Fontconfig takes a long time to generate its cache the first time
      you run a Pango- and hence fontconfig-enabled application
      (Tux Paint, Gimp, Inkscape, etc.), or after adding lots of new fonts
      to your system).
      SF.net Bug #2944951
